fix nip reference button visibility

--- a/src/app.css
+++ b/src/app.css
@@ -31,6 +31,6 @@ body {
   opacity: 0.45;
 }
 
-a {
+a:not([class]) {
   color: inherit;
 }
